misc: Basic animation feature port from plugin   - Sounds and viewing others' animation are not supported now since they are originally handled by the ServerRenderer via ProtocolLib